# c_features

./: .gitignore  CMakeLists.txt  main  main.c  readme.md
c_src/: c_http.c  fibo.c  files_test.c  nums.c  prints.c  stats.c  student_score.c
c_src/core/: argv_ex2.c  arrs_point.c  core_time.c  exiting.c
c_src/core/http_sock/: c_http.c  http_sock1.c
c_src/misc/: account.c  asters.c  fibo.c  nums.c  printing.c  reg1.c  stats.c  student_score.c
c_src/structs/: animals.c  structure.c
src/: nums.c
